dataset_4 intermediately added

--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        ")"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,17 +1098,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0115,  0.0782, -0.0848, -0.0081, -0.0452, -0.0002]],\n",
+       "tensor([[-0.0303,  0.0707,  0.0676, -0.1087, -0.0198, -0.0030]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,63 +1196,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: Train Loss: 120.8093, Train Acc: 49.19%, Test Loss: 65.2617, Test Acc: 62.05%\n",
-      "Epoch 2: Train Loss: 65.6597, Train Acc: 63.43%, Test Loss: 65.1111, Test Acc: 65.98%\n",
-      "Epoch 3: Train Loss: 32.9297, Train Acc: 78.55%, Test Loss: 31.5083, Test Acc: 80.35%\n",
-      "Epoch 4: Train Loss: 30.8340, Train Acc: 80.38%, Test Loss: 29.7295, Test Acc: 81.66%\n",
-      "Epoch 5: Train Loss: 29.6367, Train Acc: 82.08%, Test Loss: 28.5559, Test Acc: 83.30%\n",
-      "Epoch 6: Train Loss: 29.0871, Train Acc: 82.98%, Test Loss: 28.3035, Test Acc: 83.89%\n",
-      "Epoch 7: Train Loss: 28.7944, Train Acc: 83.30%, Test Loss: 28.0355, Test Acc: 83.98%\n",
-      "Epoch 8: Train Loss: 28.6944, Train Acc: 83.31%, Test Loss: 28.2261, Test Acc: 83.99%\n",
-      "Epoch 9: Train Loss: 28.5991, Train Acc: 83.36%, Test Loss: 27.9140, Test Acc: 84.07%\n",
-      "Epoch 10: Train Loss: 28.4962, Train Acc: 83.41%, Test Loss: 27.9215, Test Acc: 84.04%\n",
-      "Epoch 11: Train Loss: 28.4249, Train Acc: 83.49%, Test Loss: 27.8391, Test Acc: 83.95%\n",
-      "Epoch 12: Train Loss: 28.3663, Train Acc: 83.53%, Test Loss: 27.7396, Test Acc: 83.95%\n",
-      "Epoch 13: Train Loss: 28.2546, Train Acc: 83.56%, Test Loss: 27.4379, Test Acc: 84.02%\n",
-      "Epoch 14: Train Loss: 28.1453, Train Acc: 83.55%, Test Loss: 27.3482, Test Acc: 84.07%\n",
-      "Epoch 15: Train Loss: 28.0831, Train Acc: 83.57%, Test Loss: 27.3196, Test Acc: 84.06%\n",
-      "Epoch 16: Train Loss: 27.8835, Train Acc: 83.92%, Test Loss: 27.0273, Test Acc: 84.80%\n",
-      "Epoch 17: Train Loss: 27.0459, Train Acc: 85.11%, Test Loss: 26.2148, Test Acc: 85.82%\n",
-      "Epoch 18: Train Loss: 25.5513, Train Acc: 86.73%, Test Loss: 24.5536, Test Acc: 87.47%\n",
-      "Epoch 19: Train Loss: 24.8256, Train Acc: 87.17%, Test Loss: 24.8814, Test Acc: 86.72%\n",
-      "Epoch 20: Train Loss: 24.5987, Train Acc: 87.27%, Test Loss: 24.0104, Test Acc: 87.67%\n",
-      "Epoch 21: Train Loss: 24.5545, Train Acc: 87.31%, Test Loss: 24.2845, Test Acc: 87.73%\n",
-      "Epoch 22: Train Loss: 24.3532, Train Acc: 87.38%, Test Loss: 23.9429, Test Acc: 87.52%\n",
-      "Epoch 23: Train Loss: 24.5901, Train Acc: 87.26%, Test Loss: 23.7991, Test Acc: 87.88%\n",
-      "Epoch 24: Train Loss: 24.4173, Train Acc: 87.42%, Test Loss: 24.4715, Test Acc: 87.67%\n",
-      "Epoch 25: Train Loss: 24.4109, Train Acc: 87.36%, Test Loss: 25.2457, Test Acc: 86.46%\n",
-      "Epoch 26: Train Loss: 24.2491, Train Acc: 87.51%, Test Loss: 24.2653, Test Acc: 87.68%\n",
-      "Epoch 27: Train Loss: 24.0706, Train Acc: 87.61%, Test Loss: 23.3526, Test Acc: 88.31%\n",
-      "Epoch 28: Train Loss: 24.8257, Train Acc: 87.01%, Test Loss: 26.7095, Test Acc: 86.04%\n",
-      "Epoch 29: Train Loss: 24.5118, Train Acc: 87.23%, Test Loss: 24.1175, Test Acc: 87.53%\n",
-      "Epoch 30: Train Loss: 24.3736, Train Acc: 87.35%, Test Loss: 23.8625, Test Acc: 87.80%\n",
-      "Epoch 31: Train Loss: 24.2133, Train Acc: 87.52%, Test Loss: 24.5150, Test Acc: 86.93%\n",
-      "Epoch 32: Train Loss: 25.0643, Train Acc: 86.64%, Test Loss: 24.8070, Test Acc: 86.02%\n",
-      "Epoch 33: Train Loss: 24.1410, Train Acc: 87.48%, Test Loss: 23.3731, Test Acc: 88.13%\n",
-      "Epoch 34: Train Loss: 23.9822, Train Acc: 87.54%, Test Loss: 25.3860, Test Acc: 86.05%\n",
-      "Epoch 35: Train Loss: 24.3792, Train Acc: 87.29%, Test Loss: 23.7996, Test Acc: 87.58%\n",
-      "Epoch 36: Train Loss: 24.3457, Train Acc: 87.22%, Test Loss: 23.3258, Test Acc: 88.04%\n",
-      "Epoch 37: Train Loss: 23.8289, Train Acc: 87.74%, Test Loss: 23.6801, Test Acc: 87.72%\n",
-      "Epoch 38: Train Loss: 23.9213, Train Acc: 87.68%, Test Loss: 23.4358, Test Acc: 88.12%\n",
-      "Epoch 39: Train Loss: 23.8682, Train Acc: 87.76%, Test Loss: 24.1250, Test Acc: 87.66%\n",
-      "Epoch 40: Train Loss: 24.3705, Train Acc: 87.35%, Test Loss: 24.1707, Test Acc: 87.53%\n",
-      "Epoch 41: Train Loss: 24.0835, Train Acc: 87.69%, Test Loss: 23.7104, Test Acc: 87.95%\n",
-      "Epoch 42: Train Loss: 24.3687, Train Acc: 87.24%, Test Loss: 23.5115, Test Acc: 87.66%\n",
-      "Epoch 43: Train Loss: 24.2469, Train Acc: 87.42%, Test Loss: 23.1075, Test Acc: 88.24%\n",
-      "Epoch 44: Train Loss: 24.5774, Train Acc: 87.10%, Test Loss: 23.6887, Test Acc: 87.61%\n",
-      "Epoch 45: Train Loss: 24.2844, Train Acc: 87.37%, Test Loss: 23.7036, Test Acc: 88.11%\n",
-      "Epoch 46: Train Loss: 24.1586, Train Acc: 87.51%, Test Loss: 23.2832, Test Acc: 88.17%\n",
-      "Epoch 47: Train Loss: 24.6544, Train Acc: 87.10%, Test Loss: 23.3466, Test Acc: 88.19%\n",
-      "Epoch 48: Train Loss: 24.0736, Train Acc: 87.39%, Test Loss: 24.5533, Test Acc: 86.83%\n",
-      "Epoch 49: Train Loss: 24.2568, Train Acc: 87.43%, Test Loss: 23.6942, Test Acc: 87.71%\n",
-      "Epoch 50: Train Loss: 23.6646, Train Acc: 87.84%, Test Loss: 23.5147, Test Acc: 88.16%\n"
+      "Epoch 1: Train Loss: 119.6239, Train Acc: 55.15%, Test Loss: 43.5050, Test Acc: 79.86%\n",
+      "Epoch 2: Train Loss: 33.1834, Train Acc: 83.37%, Test Loss: 28.5166, Test Acc: 84.96%\n",
+      "Epoch 3: Train Loss: 29.2854, Train Acc: 84.65%, Test Loss: 28.5603, Test Acc: 84.97%\n",
+      "Epoch 4: Train Loss: 29.1488, Train Acc: 84.68%, Test Loss: 28.5093, Test Acc: 84.93%\n",
+      "Epoch 5: Train Loss: 24.0606, Train Acc: 86.87%, Test Loss: 15.5362, Test Acc: 91.24%\n",
+      "Epoch 6: Train Loss: 14.7690, Train Acc: 91.10%, Test Loss: 14.3732, Test Acc: 91.22%\n",
+      "Epoch 7: Train Loss: 14.7110, Train Acc: 91.12%, Test Loss: 14.4790, Test Acc: 90.89%\n",
+      "Epoch 8: Train Loss: 14.7011, Train Acc: 91.14%, Test Loss: 14.4143, Test Acc: 90.91%\n",
+      "Epoch 9: Train Loss: 14.6970, Train Acc: 91.14%, Test Loss: 14.4102, Test Acc: 90.94%\n",
+      "Epoch 10: Train Loss: 14.5960, Train Acc: 91.15%, Test Loss: 14.3756, Test Acc: 91.05%\n",
+      "Epoch 11: Train Loss: 14.5359, Train Acc: 91.17%, Test Loss: 14.3585, Test Acc: 91.04%\n",
+      "Epoch 12: Train Loss: 14.5321, Train Acc: 91.17%, Test Loss: 14.3346, Test Acc: 91.12%\n",
+      "Epoch 13: Train Loss: 14.5120, Train Acc: 91.17%, Test Loss: 14.3193, Test Acc: 91.15%\n",
+      "Epoch 14: Train Loss: 14.4972, Train Acc: 91.17%, Test Loss: 14.2820, Test Acc: 91.25%\n",
+      "Epoch 15: Train Loss: 14.4892, Train Acc: 91.19%, Test Loss: 14.2470, Test Acc: 91.38%\n",
+      "Epoch 16: Train Loss: 14.4814, Train Acc: 91.19%, Test Loss: 14.2410, Test Acc: 91.42%\n",
+      "Epoch 17: Train Loss: 14.4759, Train Acc: 91.20%, Test Loss: 14.2255, Test Acc: 91.50%\n",
+      "Epoch 18: Train Loss: 14.4705, Train Acc: 91.21%, Test Loss: 14.2199, Test Acc: 91.53%\n",
+      "Epoch 19: Train Loss: 14.4661, Train Acc: 91.22%, Test Loss: 14.2121, Test Acc: 91.54%\n",
+      "Epoch 20: Train Loss: 14.4660, Train Acc: 91.21%, Test Loss: 14.2101, Test Acc: 91.54%\n",
+      "Epoch 21: Train Loss: 14.4586, Train Acc: 91.22%, Test Loss: 14.2095, Test Acc: 91.54%\n",
+      "Epoch 22: Train Loss: 14.4538, Train Acc: 91.21%, Test Loss: 14.2080, Test Acc: 91.52%\n",
+      "Epoch 23: Train Loss: 14.4505, Train Acc: 91.23%, Test Loss: 14.2050, Test Acc: 91.55%\n",
+      "Epoch 24: Train Loss: 14.4477, Train Acc: 91.22%, Test Loss: 14.2013, Test Acc: 91.57%\n",
+      "Epoch 25: Train Loss: 14.4449, Train Acc: 91.23%, Test Loss: 14.2056, Test Acc: 91.55%\n",
+      "Epoch 26: Train Loss: 14.4421, Train Acc: 91.23%, Test Loss: 14.2118, Test Acc: 91.53%\n",
+      "Epoch 27: Train Loss: 14.4396, Train Acc: 91.23%, Test Loss: 14.2163, Test Acc: 91.53%\n",
+      "Epoch 28: Train Loss: 14.4369, Train Acc: 91.23%, Test Loss: 14.2072, Test Acc: 91.55%\n",
+      "Epoch 29: Train Loss: 14.4346, Train Acc: 91.23%, Test Loss: 14.2090, Test Acc: 91.56%\n",
+      "Epoch 30: Train Loss: 14.4320, Train Acc: 91.23%, Test Loss: 14.2118, Test Acc: 91.61%\n",
+      "Epoch 31: Train Loss: 14.4297, Train Acc: 91.24%, Test Loss: 14.2086, Test Acc: 91.59%\n",
+      "Epoch 32: Train Loss: 14.4281, Train Acc: 91.23%, Test Loss: 14.2058, Test Acc: 91.62%\n",
+      "Epoch 33: Train Loss: 14.4264, Train Acc: 91.23%, Test Loss: 14.2036, Test Acc: 91.58%\n",
+      "Epoch 34: Train Loss: 14.4234, Train Acc: 91.24%, Test Loss: 14.2067, Test Acc: 91.61%\n",
+      "Epoch 35: Train Loss: 14.4222, Train Acc: 91.23%, Test Loss: 14.2216, Test Acc: 91.61%\n",
+      "Epoch 36: Train Loss: 14.4211, Train Acc: 91.24%, Test Loss: 14.2151, Test Acc: 91.59%\n",
+      "Epoch 37: Train Loss: 14.4185, Train Acc: 91.24%, Test Loss: 14.2188, Test Acc: 91.62%\n",
+      "Epoch 38: Train Loss: 14.4175, Train Acc: 91.24%, Test Loss: 14.2157, Test Acc: 91.62%\n",
+      "Epoch 39: Train Loss: 14.4153, Train Acc: 91.24%, Test Loss: 14.2247, Test Acc: 91.56%\n",
+      "Epoch 40: Train Loss: 14.4140, Train Acc: 91.25%, Test Loss: 14.2258, Test Acc: 91.59%\n",
+      "Epoch 41: Train Loss: 14.4121, Train Acc: 91.25%, Test Loss: 14.2352, Test Acc: 91.58%\n",
+      "Epoch 42: Train Loss: 14.4110, Train Acc: 91.25%, Test Loss: 14.2262, Test Acc: 91.53%\n",
+      "Epoch 43: Train Loss: 14.4096, Train Acc: 91.26%, Test Loss: 14.2252, Test Acc: 91.52%\n",
+      "Epoch 44: Train Loss: 14.4076, Train Acc: 91.25%, Test Loss: 14.2272, Test Acc: 91.58%\n",
+      "Epoch 45: Train Loss: 14.4065, Train Acc: 91.25%, Test Loss: 14.2205, Test Acc: 91.56%\n",
+      "Epoch 46: Train Loss: 14.4051, Train Acc: 91.25%, Test Loss: 14.2212, Test Acc: 91.48%\n",
+      "Epoch 47: Train Loss: 14.4023, Train Acc: 91.26%, Test Loss: 14.2214, Test Acc: 91.56%\n",
+      "Epoch 48: Train Loss: 14.4012, Train Acc: 91.26%, Test Loss: 14.2242, Test Acc: 91.55%\n",
+      "Epoch 49: Train Loss: 14.4008, Train Acc: 91.26%, Test Loss: 14.2279, Test Acc: 91.51%\n",
+      "Epoch 50: Train Loss: 14.3990, Train Acc: 91.26%, Test Loss: 14.2215, Test Acc: 91.48%\n"
      ]
     }
    ],
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1278,19 +1278,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rl_model.policy.q_net.load_state_dict(dqn_mm_model.q_net.state_dict())\n",
-    "rl_model.policy.q_net_target.load_state_dict(dqn_mm_model.q_net.state_dict())"
+    "rl_model.policy.q_net.features_extractor.load_state_dict(dqn_mm_model.q_net.features_extractor.state_dict())\n",
+    "rl_model.policy.q_net_target.features_extractor.load_state_dict(dqn_mm_model.q_net.features_extractor.state_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1511,22 @@
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss: 126.3197, Train Acc: 58.83%, Test Loss: 59.8955, Test Acc: 76.45%\n",
+      "Epoch 2: Train Loss: 59.6939, Train Acc: 76.32%, Test Loss: 57.7942, Test Acc: 76.32%\n",
+      "Epoch 3: Train Loss: 58.6765, Train Acc: 76.38%, Test Loss: 57.5776, Test Acc: 76.48%\n",
+      "Epoch 4: Train Loss: 46.5840, Train Acc: 79.33%, Test Loss: 43.5027, Test Acc: 80.27%\n",
+      "Epoch 5: Train Loss: 41.0016, Train Acc: 80.97%, Test Loss: 28.5006, Test Acc: 85.29%\n",
+      "Epoch 6: Train Loss: 19.4928, Train Acc: 89.21%, Test Loss: 14.4254, Test Acc: 90.95%\n",
+      "Epoch 7: Train Loss: 14.8652, Train Acc: 91.20%, Test Loss: 14.3406, Test Acc: 91.00%\n",
+      "Epoch 8: Train Loss: 2.9243, Train Acc: 97.17%, Test Loss: 0.3648, Test Acc: 98.63%\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 50\n",
     "test_acc = 0\n",
@@ -1525,9 +1540,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rl_model.policy.q_net.load_state_dict(dqn_sm_model.q_net.state_dict())\n",
     "rl_model.policy.q_net_target.load_state_dict(dqn_sm_model.q_net.state_dict())"
@@ -1535,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
