--- a/notebook/data_generate.ipynb
+++ b/notebook/data_generate.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base Path: /Users/swkim/Documents/coding/thesis/kube_scheduler_master2/notebook/..\n"
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
      ]
     }
    ],
@@ -234,6 +234,146 @@
     "                new_data = new_state + [conf]\n",
     "                g.write(','.join(list(map(str,new_data))) + '\\n')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 6-reward data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic.py')\n",
+    "scheduler = SimHrScheduler(env, 'default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|█▌        | 159051/1000000 [1:36:41<17:43:41, 13.18it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 1000000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_4.csv\")\n",
+    "\n",
+    "with open(data_path, 'w') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1243402113209463"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
