--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -1847,43 +1847,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "class FE_QM_net(BaseFeaturesExtractor):\n",
     "    def __init__(self, observation_space: spaces.Box, features_dim: int = 16):\n",
     "        super(FE_QM_net, self).__init__(observation_space, features_dim)\n",
-    "        self.fc1_1 = nn.Linear(10, 16) # 5 Nodes status (CPU, Memory)\n",
-    "        self.fc1_2 = nn.Linear(2, 16)   # Pod quota (CPU, Memory)\n",
-    "        self.fc1_3 = nn.Linear(5, 16)  # Node difference (CPU, Memory)\n",
-    "        self.fc1_4 = nn.Linear(5, 16) # If the node can deploy the pod\n",
+    "        self.fc1_1 = nn.Linear(10, 16).to(device) # 5 Nodes status (CPU, Memory)\n",
+    "        self.fc1_2 = nn.Linear(2, 16).to(device)   # Pod quota (CPU, Memory)\n",
+    "        self.fc1_3 = nn.Linear(5, 16).to(device)  # Node difference (CPU, Memory)\n",
+    "        self.fc1_4 = nn.Linear(5, 16).to(device) # If the node can deploy the pod\n",
+    "        self.fc2_1 = nn.Linear(16, 8).to(device)\n",
+    "        self.fc2_2 = nn.Linear(16, 8).to(device)\n",
+    "        self.fc2_3 = nn.Linear(16, 8).to(device)\n",
+    "        self.fc2_4 = nn.Linear(16, 8).to(device)\n",
     "\n",
-    "        self.fc2_1 = nn.Linear(16, 8)\n",
-    "        self.fc2_2 = nn.Linear(16, 8)\n",
-    "        self.fc2_3 = nn.Linear(16, 8)\n",
-    "        self.fc2_4 = nn.Linear(16, 8)\n",
-    "\n",
-    "        self.fc3 = nn.Linear(32, 16)    # Concatenated vector\n",
-    "        self.fc4 = nn.Linear(16, 16)    # Last layer of FE_net\n",
+    "        self.fc3 = nn.Linear(32, 16).to(device)    # Concatenated vector\n",
+    "        self.fc4 = nn.Linear(16, 16).to(device)    # Last layer of FE_net\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # Send to device(GPU)\n",
+    "        x = x.to(device)\n",
+    "\n",
     "        x1 = x[:, :10]\n",
     "        x2 = x[:, 10:]\n",
     "        x3 = x1[:, ::2] - x1[:, 1::2] # Takes the difference of x1's odd and even columns\n",
-    "        \n",
-    "        # x4: 5 vector binary state if the node can deploy the pod If the sum up with x2 is greater than 1.0 then it is 0\n",
-    "        # Initialize x4 has the same dimension as x3\n",
-    "        # x4 = torch.zeros(x3.shape[0], 5)\n",
-    "        # # Do the same with the following in tensor\n",
-    "        # for i in range(x1.shape[0]):\n",
-    "        #     for j in range(5):\n",
-    "        #         x4_ = torch.where(x2[i, 0] + x1[i, 2*j] > 1.0 and x2[i, 1] + x1[i, 2*j+1] > 1.0, torch.tensor([0.0]), torch.tensor([1.0]))\n",
-    "        #         x4[i, j] = x4_\n",
-    "\n",
-    "        x4_condition = (x2[:, 0].unsqueeze(1) + x1[:, ::2] > 1.0) & (x2[:, 1].unsqueeze(1) + x1[:, 1::2] > 1.0)\n",
-    "        print(f\"x4_condition: {x4_condition}\")\n",
-    "        x4 = torch.where(x4_condition, torch.tensor([0.0]), torch.tensor([1.0]))\n",
+    "        x4_condition = (x2[:, 0].unsqueeze(1) + x1[:, ::2] > 1.0) | (x2[:, 1].unsqueeze(1) + x1[:, 1::2] > 1.0)\n",
+    "        x4 = torch.where(x4_condition, torch.tensor([1.0]), torch.tensor([0.0]))\n",
     "\n",
     "        x1 = F.relu(self.fc1_1(x1))  \n",
     "        x2 = F.relu(self.fc1_2(x2))\n",
@@ -1903,14 +1896,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n",
       "Using cpu device\n",
       "Wrapping the env with a `Monitor` wrapper\n",
       "Wrapping the env in a DummyVecEnv.\n"
@@ -1931,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1975,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2004,24 +1996,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x4_condition: tensor([[False, False, False, False, False]])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[-0.0185, -0.0705, -0.0762, -0.0692,  0.0444, -0.1047]],\n",
+       "tensor([[-0.0239,  0.1092,  0.0721, -0.1100, -0.0731, -0.1505]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2049,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,31 +2095,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (64) must match the size of tensor b (5) at non-singleton dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m test_acc \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, epochs\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     train_loss, train_acc \u001b[39m=\u001b[39m train(dqn_qm_model, train_pr_dataloader, criterion, optimizer)\n\u001b[1;32m      5\u001b[0m     test_loss, test_acc \u001b[39m=\u001b[39m test(dqn_qm_model, test_pr_dataloader, criterion)\n\u001b[1;32m      6\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Train Loss: \u001b[39m\u001b[39m{\u001b[39;00mtrain_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Train Acc: \u001b[39m\u001b[39m{\u001b[39;00mtrain_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%, Test Loss: \u001b[39m\u001b[39m{\u001b[39;00mtest_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Test Acc: \u001b[39m\u001b[39m{\u001b[39;00mtest_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[18], line 7\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, criterion, optimizer)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m state, target \u001b[39min\u001b[39;00m train_loader:\n\u001b[1;32m      6\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[0;32m----> 7\u001b[0m     output \u001b[39m=\u001b[39m model(state)\n\u001b[1;32m      8\u001b[0m     loss \u001b[39m=\u001b[39m criterion(output, target)\n\u001b[1;32m      9\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "Cell \u001b[0;32mIn[15], line 8\u001b[0m, in \u001b[0;36mDQN_QM_net.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m----> 8\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mq_net(x)\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m x\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/stable_baselines3/dqn/policies.py:66\u001b[0m, in \u001b[0;36mQNetwork.forward\u001b[0;34m(self, obs)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, obs: th\u001b[39m.\u001b[39mTensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m th\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m     60\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m    Predict the q-values.\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \n\u001b[1;32m     63\u001b[0m \u001b[39m    :param obs: Observation\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[39m    :return: The estimated Q-Value for each action.\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq_net(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mextract_features(obs))\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/stable_baselines3/common/policies.py:129\u001b[0m, in \u001b[0;36mBaseModel.extract_features\u001b[0;34m(self, obs)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeatures_extractor \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mNo features extractor was set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    128\u001b[0m preprocessed_obs \u001b[39m=\u001b[39m preprocess_obs(obs, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobservation_space, normalize_images\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnormalize_images)\n\u001b[0;32m--> 129\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfeatures_extractor(preprocessed_obs)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "Cell \u001b[0;32mIn[10], line 31\u001b[0m, in \u001b[0;36mFE_QM_net.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     20\u001b[0m x3 \u001b[39m=\u001b[39m x1[:, ::\u001b[39m2\u001b[39m] \u001b[39m-\u001b[39m x1[:, \u001b[39m1\u001b[39m::\u001b[39m2\u001b[39m] \u001b[39m# Takes the difference of x1's odd and even columns\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[39m# x4: 5 vector binary state if the node can deploy the pod If the sum up with x2 is greater than 1.0 then it is 0\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39m# Initialize x4 has the same dimension as x3\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[39m# x4 = torch.zeros(x3.shape[0], 5)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[39m#         x4_ = torch.where(x2[i, 0] + x1[i, 2*j] > 1.0 and x2[i, 1] + x1[i, 2*j+1] > 1.0, torch.tensor([0.0]), torch.tensor([1.0]))\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[39m#         x4[i, j] = x4_\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m x4_condition \u001b[39m=\u001b[39m (x2[:, \u001b[39m0\u001b[39;49m] \u001b[39m+\u001b[39;49m x1[:, ::\u001b[39m2\u001b[39;49m] \u001b[39m>\u001b[39m \u001b[39m1.0\u001b[39m) \u001b[39m&\u001b[39m (x2[:, \u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m x1[:, \u001b[39m1\u001b[39m::\u001b[39m2\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m1.0\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mx4_condition: \u001b[39m\u001b[39m{\u001b[39;00mx4_condition\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     33\u001b[0m x4 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mwhere(x4_condition, torch\u001b[39m.\u001b[39mtensor([\u001b[39m0.0\u001b[39m]), torch\u001b[39m.\u001b[39mtensor([\u001b[39m1.0\u001b[39m]))\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (64) must match the size of tensor b (5) at non-singleton dimension 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epochs = 100\n",
+    "epochs = 50\n",
     "test_acc = 0\n",
     "for epoch in range(1, epochs+1):\n",
     "    train_loss, train_acc = train(dqn_qm_model, train_pr_dataloader, criterion, optimizer)\n",
@@ -2146,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2120,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,17 +2142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0052, -0.4866, -0.4944, -0.5104, -0.5118, -0.4807]],\n",
+       "tensor([[ 0.0125, -0.4896, -0.4913, -0.4928, -0.4830, -0.4598]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2198,17 +2163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.5097, -1.0631, -1.1094, -1.0995, -1.1157, -0.1623]],\n",
+       "tensor([[-0.4866, -0.9753, -0.9948, -0.9746, -0.9785, -0.0041]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2219,17 +2184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.3581, -0.9187, -0.5673, -0.1252, -0.8882, -0.9964]],\n",
+       "tensor([[-0.3255, -0.8083, -0.8303, -0.0058, -0.8240, -0.8121]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
