--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -1856,22 +1856,19 @@
     "class FE_QM_net(BaseFeaturesExtractor):\n",
     "    def __init__(self, observation_space: spaces.Box, features_dim: int = 16):\n",
     "        super(FE_QM_net, self).__init__(observation_space, features_dim)\n",
-    "        self.fc1_1 = nn.Linear(10, 16).to(device) # 5 Nodes status (CPU, Memory)\n",
-    "        self.fc1_2 = nn.Linear(2, 16).to(device)   # Pod quota (CPU, Memory)\n",
-    "        self.fc1_3 = nn.Linear(5, 16).to(device)  # Node difference (CPU, Memory)\n",
-    "        self.fc1_4 = nn.Linear(5, 16).to(device) # If the node can deploy the pod\n",
-    "        self.fc2_1 = nn.Linear(16, 8).to(device)\n",
-    "        self.fc2_2 = nn.Linear(16, 8).to(device)\n",
-    "        self.fc2_3 = nn.Linear(16, 8).to(device)\n",
-    "        self.fc2_4 = nn.Linear(16, 8).to(device)\n",
+    "        self.fc1_1 = nn.Linear(10, 16) # 5 Nodes status (CPU, Memory)\n",
+    "        self.fc1_2 = nn.Linear(2, 16)   # Pod quota (CPU, Memory)\n",
+    "        self.fc1_3 = nn.Linear(5, 16)  # Node difference (CPU, Memory)\n",
+    "        self.fc1_4 = nn.Linear(5, 16) # If the node can deploy the pod\n",
+    "        self.fc2_1 = nn.Linear(16, 8)\n",
+    "        self.fc2_2 = nn.Linear(16, 8)\n",
+    "        self.fc2_3 = nn.Linear(16, 8)\n",
+    "        self.fc2_4 = nn.Linear(16, 8)\n",
     "\n",
-    "        self.fc3 = nn.Linear(32, 16).to(device)    # Concatenated vector\n",
-    "        self.fc4 = nn.Linear(16, 16).to(device)    # Last layer of FE_net\n",
+    "        self.fc3 = nn.Linear(32, 16)    # Concatenated vector\n",
+    "        self.fc4 = nn.Linear(16, 16)    # Last layer of FE_net\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Send to device(GPU)\n",
-    "        x = x.to(device)\n",
-    "\n",
     "        x1 = x[:, :10]\n",
     "        x2 = x[:, 10:]\n",
     "        x3 = x1[:, ::2] - x1[:, 1::2] # Takes the difference of x1's odd and even columns\n",
