--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -31,18 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/swkim/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import stable_baselines3 as sb3\n",
     "from stable_baselines3.common.torch_layers import BaseFeaturesExtractor\n",
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1874,6 +1865,7 @@
     "        x3 = x1[:, ::2] - x1[:, 1::2] # Takes the difference of x1's odd and even columns\n",
     "        x4_condition = (x2[:, 0].unsqueeze(1) + x1[:, ::2] > 1.0) | (x2[:, 1].unsqueeze(1) + x1[:, 1::2] > 1.0)\n",
     "        x4 = torch.where(x4_condition, torch.tensor([1.0]), torch.tensor([0.0]))\n",
+    "        x4 = x4.to(device)\n",
     "\n",
     "        x1 = F.relu(self.fc1_1(x1))  \n",
     "        x2 = F.relu(self.fc1_2(x2))\n",
@@ -1893,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1964,7 @@
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,17 +1985,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0239,  0.1092,  0.0721, -0.1100, -0.0731, -0.1505]],\n",
+       "tensor([[-0.0172, -0.0472, -0.1348, -0.0148, -0.0156,  0.0500]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2014,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2054,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2109,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,17 +2131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0125, -0.4896, -0.4913, -0.4928, -0.4830, -0.4598]],\n",
+       "tensor([[-0.0292, -0.5223, -0.4937, -0.5128, -0.5302, -0.4893]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,17 +2152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.4866, -0.9753, -0.9948, -0.9746, -0.9785, -0.0041]],\n",
+       "tensor([[-0.2978, -0.7821, -0.8088, -0.6950, -0.8630, -0.3530]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,17 +2173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.3255, -0.8083, -0.8303, -0.0058, -0.8240, -0.8121]],\n",
+       "tensor([[-0.2366, -0.7400, -0.6750, -0.1249, -0.7668, -0.7106]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
