Still fixing dqn_qm

--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/swkim/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import stable_baselines3 as sb3\n",
     "from stable_baselines3.common.torch_layers import BaseFeaturesExtractor\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,9 +1872,14 @@
     "        x1 = x[:, :10]\n",
     "        x2 = x[:, 10:]\n",
     "        x3 = x1[:, ::2] - x1[:, 1::2] # Takes the difference of x1's odd and even columns\n",
-    "        x4_condition = (x2[:, 0].unsqueeze(1) + x1[:, ::2] > 1.0) | (x2[:, 1].unsqueeze(1) + x1[:, 1::2] > 1.0)\n",
-    "        x4 = torch.where(x4_condition, torch.tensor([1.0]), torch.tensor([0.0]))\n",
-    "        x4 = x4.to(device)\n",
+    "\n",
+    "        # Duplicte x2 5 times horizontally\n",
+    "        x2_ = x2.repeat(1, 5).view(-1, 10)\n",
+    "        x4_ = (1-x1) - x2_ >= 0\n",
+    "        x4 = x4_[:, ::2] * x4_[:, 1::2]\n",
+    "        # Convert boolean to float\n",
+    "        x4 = x4.type(torch.FloatTensor)\n",
+    "        # print(f\"x4 : {x4}\")\n",
     "\n",
     "        x1 = F.relu(self.fc1_1(x1))  \n",
     "        x2 = F.relu(self.fc1_2(x2))\n",
@@ -1885,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1978,7 @@
        ")"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,17 +1999,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0172, -0.0472, -0.1348, -0.0148, -0.0156,  0.0500]],\n",
+       "tensor([[ 0.1132,  0.0078,  0.0370,  0.0050, -0.0351, -0.0203]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2084,9 +2098,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss: 0.0060, Train Acc: 68.59%, Test Loss: 0.0039, Test Acc: 72.20%\n",
+      "Epoch 2: Train Loss: 0.0037, Train Acc: 74.28%, Test Loss: 0.0035, Test Acc: 75.66%\n",
+      "Epoch 3: Train Loss: 0.0034, Train Acc: 75.43%, Test Loss: 0.0033, Test Acc: 76.20%\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 50\n",
     "test_acc = 0\n",
@@ -2100,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2133,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,17 +2155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0292, -0.5223, -0.4937, -0.5128, -0.5302, -0.4893]],\n",
+       "tensor([[ 0.0032, -0.5091, -0.4996, -0.5009, -0.4956, -0.4971]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2152,17 +2176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.2978, -0.7821, -0.8088, -0.6950, -0.8630, -0.3530]],\n",
+       "tensor([[-0.4486, -0.9389, -0.8977, -0.8838, -0.9370, -0.0978]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,17 +2197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.2366, -0.7400, -0.6750, -0.1249, -0.7668, -0.7106]],\n",
+       "tensor([[-0.3366, -0.8217, -0.8227, -0.0550, -0.8426, -0.8394]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
